RESOLVED FIXED292298
[visionOS] Fullscreen presentations of spatial content flicker when entering fullscreen mode
https://bugs.webkit.org/show_bug.cgi?id=292298
Summary [visionOS] Fullscreen presentations of spatial content flicker when entering ...
Jer Noble
Reported 2025-04-29 14:56:54 PDT
[visionOS] Fullscreen presentations of spatial content flicker when entering fullscreen mode
Attachments
Jer Noble
Comment 1 2025-04-29 14:56:55 PDT
Jer Noble
Comment 2 2025-04-29 15:00:38 PDT
EWS
Comment 3 2025-04-30 12:53:07 PDT
Committed 294354@main (aa83fcd4f31b): <https://commits.webkit.org/294354@main> Reviewed commits have been landed. Closing PR #44711 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.