[visionOS] Fullscreen presentations of spatial content flicker when entering fullscreen mode rdar://149032242 https://bugs.webkit.org/show_bug.cgi?id=292298

Reviewed by Andy Estes.

We no longer need to set the contentType explicitly upon setting up the view controller, as this is
handled by LinearMediaPlayer itself. Add logging to the LinearMediaPlayer isImmersiveVideo setter,
which is now the only place where `contentType = planar` is set.

* Source/WebKit/Platform/ios/VideoPresentationInterfaceLMK.mm:
(WebKit::VideoPresentationInterfaceLMK::setupPlayerViewController):
* Source/WebKit/WebKitSwift/LinearMediaKit/LinearMediaPlayer.swift:
(WKSLinearMediaPlayer.isImmersiveVideo):

Canonical link: https://commits.webkit.org/294354@main